cmake: Add functional check for cstdint

--- a/cpp/lib/ome/compat/config.h.in
+++ b/cpp/lib/ome/compat/config.h.in
@@ -41,6 +41,7 @@
 
 // Configured features
 
+#cmakedefine OME_HAVE_CSTDINT 1
 #cmakedefine OME_HAVE_MEMORY 1
 #cmakedefine OME_HAVE_BOOST_SHARED_PTR 1
 #cmakedefine OME_HAVE_TUPLE 1
