cmake: Add and use HeaderTest functions for header testing
Each component computes its header set when running cmake, and
writes this out to a Headers.cmake file in the corresponding
test directory.  This header list may then be sourced and used
by the test scripts, avoiding the need for racy globbing of
the source and binary directories (it's racy because the source
generation may not have occured at the time the globbing is
performed).  This makes header test generation race-free and
robust--it will always match the header set exactly.

--- a/cpp/test/ome-compat/CMakeLists.txt
+++ b/cpp/test/ome-compat/CMakeLists.txt
@@ -37,6 +37,6 @@
 if(BUILD_TESTS)
   include_directories(${OME_TOPLEVEL_INCLUDES})
 
-  headers_test(ome-compat ome/compat)
+  header_test_from_file(ome-compat ome/compat)
   add_test(ome-compat/headers ome-compat-headers)
 endif(BUILD_TESTS)
