cpp: Add compat header for variant
In order to work around Boost.Variant and Boost.MPL type list size
limits in earlier versions of Boost, add functional cmake check and
manually increase the limits if using a buggy version.  This fixes
the travis build.

--- a/cpp/lib/ome/compat/CMakeLists.txt
+++ b/cpp/lib/ome/compat/CMakeLists.txt
@@ -40,7 +40,8 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in
 set(ome_compat_static_headers
     cstdint.h
     memory.h
-    tuple.h)
+    tuple.h
+    variant.h)
 
 set(ome_compat_generated_headers
    ${CMAKE_CURRENT_BINARY_DIR}/config.h)
