--- a/cpp/lib/ome/compat/config.h.in
+++ b/cpp/lib/ome/compat/config.h.in
@@ -42,6 +42,7 @@
 // Configured features
 
 #cmakedefine OME_HAVE_ARRAY 1
+#cmakedefine OME_HAVE_BOOST_ARRAY 1
 #cmakedefine OME_HAVE_CSTDINT 1
 #cmakedefine OME_HAVE_MEMORY 1
 #cmakedefine OME_HAVE_BOOST_SHARED_PTR 1
