cpp: compat: Add regex.h and corresponding cmake checks

--- a/cpp/lib/ome/compat/CMakeLists.txt
+++ b/cpp/lib/ome/compat/CMakeLists.txt
@@ -47,6 +47,16 @@ set(ome_compat_static_headers
 set(ome_compat_generated_headers
    ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
+set(ome_compat_headers
+    ${ome_compat_static_headers}
+    ${ome_compat_generated_headers})
+
+set(ome_compat_sources)
+
+add_library(ome-compat STATIC ${ome_compat_sources} ${ome_compat_headers})
+target_link_libraries(ome-compat ${REGEX_LIBRARY})
+set_target_properties(ome-compat PROPERTIES LINKER_LANGUAGE CXX)
+
 set(ome_compat_includedir "${CMAKE_INSTALL_FULL_INCLUDEDIR}/ome/compat")
 
 install(FILES ${ome_compat_static_headers} ${ome_compat_generated_headers}
