cmake: Add check for boost::filesystem::absolute

--- a/cpp/lib/ome/compat/config.h.in
+++ b/cpp/lib/ome/compat/config.h.in
@@ -54,6 +54,7 @@
 #cmakedefine OME_HAVE_BOOST_REGEX 1
 #cmakedefine OME_HAVE_BOOST_THREAD 1
 #cmakedefine OME_HAVE_BOOST_FORMAT 1
+#cmakedefine OME_HAVE_BOOST_FILESYSTEM_ABSOLUTE 1
 #cmakedefine OME_HAVE_BOOST_FILESYSTEM_CANONICAL 1
 #cmakedefine OME_HAVE_NOEXCEPT 1
 #cmakedefine OME_VARIANT_LIMIT 1
