cpp: ome-compat: Add filesystem compatibility header
Work around missing absolute() and canonical() functions in older
versions of Boost.  canonical() is missing in 1.46 and earlier.
absolute() is missing in versions older than 1.46.

--- a/cpp/lib/ome/compat/CMakeLists.txt
+++ b/cpp/lib/ome/compat/CMakeLists.txt
@@ -40,6 +40,7 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in
 set(ome_compat_static_headers
     array.h
     cstdint.h
+    filesystem.h
     memory.h
     mstream.h
     regex.h
