--- a/cpp/lib/ome/compat/config.h.in
+++ b/cpp/lib/ome/compat/config.h.in
@@ -56,6 +56,8 @@
 #cmakedefine OME_HAVE_BOOST_FORMAT 1
 #cmakedefine OME_HAVE_BOOST_FILESYSTEM_ABSOLUTE 1
 #cmakedefine OME_HAVE_BOOST_FILESYSTEM_CANONICAL 1
+#cmakedefine OME_HAVE_BOOST_TYPE_TRAITS_HPP 1
+#cmakedefine OME_HAVE_BOOST_GEOMETRY_INDEX_RTREE_HPP 1
 #cmakedefine OME_HAVE_NOEXCEPT 1
 #cmakedefine OME_VARIANT_LIMIT 1
 
