cpp: test: Header tests are extended tests
Only build when extended tests are enabled.

--- a/cpp/test/ome-compat/CMakeLists.txt
+++ b/cpp/test/ome-compat/CMakeLists.txt
@@ -38,8 +38,10 @@ if(BUILD_TESTS)
   include_directories(${OME_TOPLEVEL_INCLUDES}
                       ${Boost_INCLUDE_DIRS})
 
-  header_test_from_file(ome-compat ome-compat ome/compat)
-  add_test(ome-compat/headers ome-compat-headers)
+  if(extended-tests)
+    header_test_from_file(ome-compat ome-compat ome/compat)
+    add_test(ome-compat/headers ome-compat-headers)
+  endif(extended-tests)
 
   add_executable(array array.cpp)
   target_link_libraries(array ome-compat)
