cpp: compat: Add basic module introspection
This should work on ELF and Mach-O platforms, i.e. FreeBSD,
Linux and MacOS X.  It will need making conditional and
special-casing for Windows.  This is to allow data and
module directories to be discovered at runtime so that data
files and loadable modules may be loaded.  Normally one run
cmake with a fixed prefix path in which case this is known,
but for portable builds which may have the prefix changed
we need a method for dynamically discovering this
information.

--- a/cpp/test/ome-compat/CMakeLists.txt
+++ b/cpp/test/ome-compat/CMakeLists.txt
@@ -67,6 +67,12 @@ if(BUILD_TESTS)
 
   add_test(ome-compat/memory memory)
 
+  add_executable(module module.cpp)
+  target_link_libraries(module ome-compat)
+  target_link_libraries(module ome-test)
+
+  add_test(ome-compat/module module)
+
   add_executable(mstream mstream.cpp)
   target_link_libraries(mstream ome-compat)
   target_link_libraries(mstream ome-test)
