cpp: compat: Add C++98/boost std::owner_less fallback
The following implementations are supported:

- C++11 std::owner_less
- Boost boost::owner_less (newer Boost versions aligned with C++11)
- Our fallback reimplementation (older Boost versions)

--- a/cpp/lib/ome/compat/config.h.in
+++ b/cpp/lib/ome/compat/config.h.in
@@ -46,6 +46,7 @@
 #cmakedefine OME_HAVE_CSTDINT 1
 #cmakedefine OME_HAVE_MEMORY 1
 #cmakedefine OME_HAVE_BOOST_SHARED_PTR 1
+#cmakedefine OME_HAVE_BOOST_OWNER_LESS 1
 #cmakedefine OME_HAVE_TUPLE 1
 #cmakedefine OME_HAVE_TR1_TUPLE 1
 #cmakedefine OME_HAVE_BOOST_TUPLE 1
