cpp: lib: Add qtwidgets component
This component contains widgets for rendering images using OpenGL
with the Bio-Formats reader API.  Initially, OpenGL 2.1 is used
only, for basic greyscale rendering of image planes.

--- a/cpp/lib/CMakeLists.txt
+++ b/cpp/lib/CMakeLists.txt
@@ -39,4 +39,5 @@ add_subdirectory(ome/internal)
 add_subdirectory(ome/xerces)
 add_subdirectory(ome/xml)
 add_subdirectory(ome/bioformats)
+add_subdirectory(ome/qtwidgets)
 add_subdirectory(ome/test)
