cpp: compat: Link with Boost log_setup

--- a/cpp/lib/ome/compat/CMakeLists.txt
+++ b/cpp/lib/ome/compat/CMakeLists.txt
@@ -84,6 +84,7 @@ add_library(ome-compat SHARED ${ome_compat_sources} ${ome_compat_headers})
 target_link_libraries(ome-compat
                       ${REGEX_LIBRARY}
                       ${THREAD_LIBRARY}
+                      ${Boost_LOG_SETUP_LIBRARY_RELEASE}
                       ${Boost_LOG_LIBRARY_RELEASE}
                       ${Boost_FILESYSTEM_LIBRARY_RELEASE}
                       ${Boost_SYSTEM_LIBRARY_RELEASE}
