--- a/cpp/lib/ome/common/config.h.in
+++ b/cpp/lib/ome/common/config.h.in
@@ -1,6 +1,6 @@
 /*
  * #%L
- * OME-COMPAT C++ library for C++ compatibility/portability
+ * OME-COMMON C++ library for C++ compatibility/portability
  * %%
  * Copyright © 2006 - 2014 Open Microscopy Environment:
  *   - Massachusetts Institute of Technology
@@ -36,46 +36,36 @@
  * #L%
  */
 
-/**
- * @file ome/compat/array.h Array type substitution.
- *
- * This header substitutes Boost types for the same types in the std
- * namespace when not using a conforming C++11 compiler.  This permits
- * all code to use the C++11 standard types irrespective of the
- * compiler being used.
- */
+#ifndef OME_COMMON_CONFIG_H
+#define OME_COMMON_CONFIG_H
 
-#ifndef OME_COMPAT_ARRAY_H
-# define OME_COMPAT_ARRAY_H
+// Configured features
 
-# include <ome/common/config.h>
+#cmakedefine OME_HAVE_ARRAY 1
+#cmakedefine OME_HAVE_BOOST_ARRAY 1
+#cmakedefine OME_HAVE_CSTDINT 1
+#cmakedefine OME_HAVE_BOOST_CSTDINT 1
+#cmakedefine OME_HAVE_MEMORY 1
+#cmakedefine OME_HAVE_BOOST_SHARED_PTR 1
+#cmakedefine OME_HAVE_BOOST_OWNER_LESS 1
+#cmakedefine OME_HAVE_TUPLE 1
+#cmakedefine OME_HAVE_TR1_TUPLE 1
+#cmakedefine OME_HAVE_BOOST_TUPLE 1
+#cmakedefine OME_HAVE_REGEX 1
+#cmakedefine OME_HAVE_TR1_REGEX 1
+#cmakedefine OME_HAVE_BOOST_REGEX 1
+#cmakedefine OME_HAVE_BOOST_LOG 1
+#cmakedefine OME_HAVE_BOOST_THREAD 1
+#cmakedefine OME_HAVE_BOOST_FORMAT 1
+#cmakedefine OME_HAVE_BOOST_FILESYSTEM_ABSOLUTE 1
+#cmakedefine OME_HAVE_BOOST_FILESYSTEM_CANONICAL 1
+#cmakedefine OME_HAVE_BOOST_TYPE_TRAITS_HPP 1
+#cmakedefine OME_HAVE_BOOST_GEOMETRY_INDEX_RTREE_HPP 1
+#cmakedefine OME_HAVE_NOEXCEPT 1
+#cmakedefine OME_VARIANT_LIMIT 1
 
-# ifdef OME_HAVE_ARRAY
-#  include <array>
-namespace ome
-{
-  namespace compat
-  {
-    using std::array;
-  }
-}
-# elif OME_HAVE_BOOST_ARRAY
-#  include <boost/array.hpp>
-namespace ome
-{
-  namespace compat
-  {
-    using boost::array;
-  }
-}
-# else
-#  error An array implementation is not available
-# endif
+#ifndef OME_HAVE_NOEXCEPT
+# define noexcept
+#endif
 
-#endif // OME_COMPAT_ARRAY_H
-
-/*
- * Local Variables:
- * mode:C++
- * End:
- */
+#endif // OME_COMMON_CONFIG_H
