cpp: common: Update compatibility snprintf for VS2013 and VS2012

--- a/cpp/lib/ome/common/config.h.in
+++ b/cpp/lib/ome/common/config.h.in
@@ -62,6 +62,7 @@
 #cmakedefine OME_HAVE_BOOST_TYPE_TRAITS_HPP 1
 #cmakedefine OME_HAVE_BOOST_GEOMETRY_INDEX_RTREE_HPP 1
 #cmakedefine OME_HAVE_NOEXCEPT 1
+#cmakedefine OME_HAVE_SNPRINTF 1
 #cmakedefine OME_VARIANT_LIMIT 1
 
 #ifndef OME_HAVE_NOEXCEPT
