--- a/lib/ome/common/config-internal.h.in
+++ b/lib/ome/common/config-internal.h.in
@@ -1,6 +1,6 @@
 /*
  * #%L
- * OME-INTERNAL C++ headers for internal use only
+ * OME-COMMON C++ library for C++ compatibility/portability
  * %%
  * Copyright © 2006 - 2015 Open Microscopy Environment:
  *   - Massachusetts Institute of Technology
