--- a/lib/ome/compat/CMakeLists.txt
+++ b/lib/ome/compat/CMakeLists.txt
@@ -56,5 +56,14 @@ set(ome_compat_includedir "${CMAKE_INSTALL_FULL_INCLUDEDIR}/ome/compat")
 install(FILES ${ome_compat_headers}
         DESTINATION ${ome_compat_includedir})
 
+set(LIBRARY_PREFIX OME_COMPAT)
+set(LIBRARY_NAME ome-compat)
+set(LIBRARY_HEADER ome/compat/memory.h)
+set(LIBRARY_DEPENDS ome/compat/memory.h)
+configure_file(${PROJECT_SOURCE_DIR}/cmake/TemplateInterfaceConfig.cmake.in
+               ${CMAKE_CURRENT_BINARY_DIR}/ome-compat-config.cmake)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/ome-compat-config.cmake
+        DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}/cmake/ome-compat)
+
 # Dump header list for testing
 header_include_list_write(ome_compat_headers "" ome/compat ${PROJECT_BINARY_DIR}/test/ome-compat)
