--- a/test/ome-compat/CMakeLists.txt
+++ b/test/ome-compat/CMakeLists.txt
@@ -35,8 +35,7 @@
 # #L%
 
 if(BUILD_TESTS)
-  include_directories(${OME_TOPLEVEL_INCLUDES}
-                      ${Boost_INCLUDE_DIRS})
+  include_directories(${OME_TOPLEVEL_INCLUDES})
 
   if(extended-tests)
     header_test_from_file(ome-compat ome-compat ome/compat)
